blackboard_ws/log/build_2021-11-23_14-24-39/bbinstance/stderr.log
  File "/home/mpcmeulensteen/blackboard_ws/install/bbinstance/lib/python3.8/site-packages/bbinstance/markers.py", line 55
    print "Shutting down node"
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("Shutting down node")?

